1. header logo now has a link in it 2. header nav links :hover fixed 3. header nav <ul> is now wrapped in <nav> 4. Bootstrap CDN replaced with bootstrap-grid.css file 5. flex-column + align-items center replaced with text-align:center, margin:auto 6. height: ***px deleted 7. <div> around text is now <p> or <span> 8. 1st item in input block now has mt-3 class 9. 'Manage your team in once place' font size fixed

--- a/assets/scss/normalize.scss
+++ b/assets/scss/normalize.scss
@@ -4,4 +4,14 @@ li {
 a {
   color: $color-grey-lighten-1;
   text-decoration: none;
+  :hover {
+    color: $color-grey-lighten-2;
+  }
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
