--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import "buttons";
 @import "mixins";
 @import "normalize";
+@import "spacing";
 
 body {
   width: 1600px;
@@ -16,7 +17,6 @@ body {
 .header {
   z-index: 1;
   width: 1150px;
-  height: 50px;
   &__nav {
     @include font-inter-light;
     @include subtitle-2;
@@ -34,6 +34,7 @@ body {
   &__content {
     margin-top: 79px;
     z-index: 1;
+    text-align: center;
   }
   &__title {
     @include font-inter-bold;
@@ -59,6 +60,9 @@ body {
 .advantages {
   margin-bottom: 120px;
   margin-top: 120px;
+  .circle {
+    margin: auto;
+  }
   &__red-circle {
     @include circle;
     background-color: $color-red-circle;
@@ -88,13 +92,16 @@ body {
     color: $color-black;
     font-size: 22px;
     line-height: 34px;
+    text-align: center;
   }
   &__subtitle {
     @include font-inter-reg;
     @include subtitle;
     color: $color-grey-darken-1;
     font-weight: 400;
-    max-width: 307px;
+    margin: 0;
+    text-align: center;
+    max-width: 300px;
   }
 }
 
@@ -219,6 +226,7 @@ body {
   &__subtitle {
     @include font-inter-light;
     @include subtitle;
+    text-align: center;
     color: $color-white;
     max-width: 750px;
   }
@@ -238,12 +246,12 @@ body {
     font-weight: 100;
     color: $color-grey-darken-1;
     max-width: 750px;
+    text-align: center;
   }
   &__toggle-buttons {
     @include font-inter-bold;
     @include border;
     width: 250px;
-    height: 46px;
     border-radius: 23px;
     font-weight: 100;
     font-size: 12px;
@@ -259,11 +267,9 @@ body {
     transition: all 0.3s ease-out;
     border-radius: 23px;
     width: 116px;
-    height: 38px;
   }
   &__price-card {
     background-color: $color-white;
-    width: 350px;
     border-radius: 6px;
   }
   &__line {
@@ -340,6 +346,7 @@ body {
     @include font-inter-reg;
     @include subtitle-2;
     color: $color-grey-2;
+    text-align: center;
   }
 }
 
@@ -404,7 +411,8 @@ body {
   margin-top: 100px;
   &__title {
     @include font-inter-bold;
-    @include title;
+    font-size: 28px;
+    line-height: 50px;
     color: $color-black;
   }
 }
@@ -429,7 +437,6 @@ body {
   }
   &__input-item {
     width: 456px;
-    height: 50px;
     font-size: 14px;
     line-height: 50px;
     letter-spacing: -0.3px;
@@ -441,16 +448,6 @@ body {
   }
   &__attachment {
     width: 456px;
-  }
-  &__attach-button {
-    background-color: $color-attach-button;
-    height: 35px;
-    width: 129px;
-    border-radius: 3px;
-    border: none;
-    font-size: 14px;
-    line-height: 50px;
-    letter-spacing: -0.3px;
   }
   &__button-send {
     width: 456px;
